--- a/slides/Ex01.tex
+++ b/slides/Ex01.tex
@@ -165,7 +165,9 @@ L_0 \approx \qty{1.305}{m}.
     忽略光电子倍增与电荷分辨的不确定度，光子衰减的相对不确定度为
     $$\sigma_\mathrm{photon}=\sqrt{\frac{2p_1(1-p_1)}{N}+\frac{2p_1(1-p_1)}{N}}$$
 
-    其中$p_1,p_2$分别为两端的光子幸存率，$N$为事例产生的总光子数。估计为
+    其中$p_1,p_2$分别为两端的光子幸存率，$N$为事例产生的总光子数。
+    
+    假设总光子数100,估计相对不确定度为0.100。
 
     示波器的时间分辨率为$\Delta t=0.5\mathrm{ns}$,将时间分布视为均匀分布，时间差的不确定度为
 
@@ -173,6 +175,7 @@ L_0 \approx \qty{1.305}{m}.
 
     对应的相对不确定度为$\sigma_t=\frac{\Delta tc}{\sqrt{6}nL_0}=0.047.$
 
+    最终得到衰减长度为$0.83\pm0.09_{\mathrm{sysm}}\pm0.15_{\mathrm{stat}}.$
 \end{frame}
 \section{参考文献}
 \label{sec:orgf6ca842}
