--- a/AttenuationLength/PreAnalysis.ipynb
+++ b/AttenuationLength/PreAnalysis.ipynb
@@ -2,18 +2,18 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/tmp/ipykernel_179465/3425972572.py:67: RuntimeWarning: divide by zero encountered in scalar divide\n",
+      "/tmp/ipykernel_179465/2368139569.py:71: RuntimeWarning: divide by zero encountered in scalar divide\n",
       "  uncertainty_t = np.append(uncertainty_t, (t[1] - t[0]) / delta_t_begin * 1.414)\n",
-      "/tmp/ipykernel_179465/3425972572.py:67: RuntimeWarning: divide by zero encountered in scalar divide\n",
+      "/tmp/ipykernel_179465/2368139569.py:71: RuntimeWarning: divide by zero encountered in scalar divide\n",
       "  uncertainty_t = np.append(uncertainty_t, (t[1] - t[0]) / delta_t_begin * 1.414)\n",
-      "/tmp/ipykernel_179465/3425972572.py:67: RuntimeWarning: divide by zero encountered in scalar divide\n",
+      "/tmp/ipykernel_179465/2368139569.py:71: RuntimeWarning: divide by zero encountered in scalar divide\n",
       "  uncertainty_t = np.append(uncertainty_t, (t[1] - t[0]) / delta_t_begin * 1.414)\n"
      ]
     },
@@ -21,10 +21,11 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Result:  1.3050392631059207\n",
+      "Result:  0.825451779320633\n",
       "Correlation:  0.44220220850519554\n",
       "[7.82344369e-10 7.03426283e-10]\n",
-      "Uncetainty:  0.17984386943650946\n"
+      "Uncetainty:  0.17984386943650946\n",
+      "Stat uncertainty : 0.14845244202627433\n"
      ]
     },
     {
@@ -47,6 +48,10 @@
     "import matplotlib.pyplot as plt\n",
     "import seaborn as sns\n",
     "\n",
+    "\n",
+    "Nphoton=100\n",
+    "n=1.581\n",
+    "DetectorLength=0.605\n",
     "t1 = np.array([])\n",
     "t2 = np.array([])\n",
     "q1 = np.array([])\n",
@@ -122,32 +127,36 @@
     "plt.plot(t1, t1*slope + intercept, 'r-')\n",
     "plt.savefig(\"./figs/dist.png\")\n",
     "\n",
-    "print(\"Result: \", -z[0] * 3e8)\n",
+    "L0=-z[0] * 3e8/n\n",
+    "\n",
+    "print(\"Result: \", L0)\n",
     "print(\"Correlation: \", r_value**2)\n",
     "print(np.sqrt(np.diag(cov)))\n",
     "\n",
-    "print(\"Uncetainty: \", np.sqrt(np.diag(cov))[0] / -z[0])\n"
+    "print(\"Uncetainty: \", np.sqrt(np.diag(cov))[0] / -z[0])\n",
+    "\n",
+    "print(\"Stat uncertainty :\",np.sqrt(np.diag(cov))[0] / -z[0]*L0)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Photon uncertainty:  0.07377851919012947 Time uncertainty : 0.04692367908061113\n"
+      "Photon uncertainty:  0.09992390635283664 \n",
+      "Time uncertainty : 0.04692367908061114 \n",
+      "Sysm uncertainty : 0.11039301934121853 \n",
+      "Sysm uncertainty : 0.09112411423978589\n"
      ]
     }
    ],
    "source": [
     "# sysm uncertainty\n",
-    "Nphoton=100\n",
-    "n=1.5\n",
-    "DetectorLength=1.581\n",
-    "L0=-z[0] * 3e8/n\n",
+    "\n",
     "p=np.exp(-1*DetectorLength/L0)\n",
     "sigma_photon=np.sqrt(4/Nphoton*p*(1-p))\n",
     "\n",
@@ -156,36 +165,7 @@
     "c=3e8\n",
     "sigma_t=delta_t*c/np.sqrt(6)/L0/n\n",
     "\n",
-    "print(\"Photon uncertainty: \",sigma_photon,\"Time uncertainty :\", sigma_t)\n",
-    "\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Photon uncertainty:  0.07377851919012947 \n",
-      " Time uncertainty : 0.04692367908061113\n"
-     ]
-    }
-   ],
-   "source": [
-    "DetectorLength=1.581\n",
-    "L0=-z[0] * 3e8/n\n",
-    "p=np.exp(-1*DetectorLength/L0)\n",
-    "sigma_photon=np.sqrt(4/Nphoton*p*(1-p))\n",
-    "\n",
-    "\n",
-    "delta_t=5e-10\n",
-    "c=3e8\n",
-    "sigma_t=delta_t*c/np.sqrt(6)/L0/n\n",
-    "\n",
-    "print(\"Photon uncertainty: \",sigma_photon,\"\\nTime uncertainty :\", sigma_t)\n",
+    "print(\"Photon uncertainty: \",sigma_photon,\"\\nTime uncertainty :\", sigma_t,\"\\nSysm uncertainty :\",np.sqrt(sigma_photon**2+sigma_t**2),\"\\nSysm uncertainty :\",np.sqrt(sigma_photon**2+sigma_t**2)*L0)\n",
     "\n"
    ]
   }
