--- a/DetectorPerform/AttenuationLength/PreAnalysis.ipynb
+++ b/DetectorPerform/AttenuationLength/PreAnalysis.ipynb
@@ -60,7 +60,7 @@
     "\n",
     "for i in range(41):\n",
     "    # Read csv files\n",
-    "    df = pd.read_csv(\"../ExperimentData/AttenuationLength/lengtha\" + str(i) + \".csv\")\n",
+    "    df = pd.read_csv(\"../../ExperimentData/AttenuationLength/lengtha\" + str(i) + \".csv\")\n",
     "    t = df['Time(s)'].values\n",
     "    \n",
     "    ch1 = df['CH1V'].values\n",
