--- a/slides/Ex02/Ex02.org
+++ b/slides/Ex02/Ex02.org
@@ -24,7 +24,7 @@
 #+LATEX_HEADER: \setbeamertemplate{bibliography item}[text] % 使用 text 的 references 形式
 #+LATEX_HEADER: %\setbeamerfont{footnote}{\tiny} % 可选择 tiny footnote
 
-#+TITLE: 能量刻度与\(\mu\)寿命测量
+#+TITLE: 余波, 能量刻度与 \mu 寿命测量
 #+SUBTITLE: 宇宙线粒子探测与物理实验
 #+AUTHOR: 朱宇涛 \quad 报告人：王亚朋
 #+DATE: 2024年10月24日
@@ -63,8 +63,7 @@
 
   计数率：\(n = \qty{859}{min^{-1}}\).
 
-同时计算得到偶然符合计数率
-
+同时计算得到偶然符合计数率:
 \begin{equation}
 \label{eq:1}
 n_a = \qty{0.176}{min^{-1}}.
@@ -87,29 +86,37 @@ n_a = \qty{0.176}{min^{-1}}.
 #+caption: 存在余波信号的余波分布
 [[../../img/afterPulse02.pdf]]
 
+** 余波时间分布
+对余波分布作指数拟合:
+
+#+attr_latex: :width 0.7\textwidth
+#+caption: 余波分布拟合
+[[../../img/afterPulse02r.pdf]]
+
 ** 单光子电荷
 #+attr_latex: :width 0.6\textwidth
 #+caption: 单光子电荷
 [[../../DetectorPerform/SPhoton/SphotonCharge.pdf]]
 
-- 单光子电荷量: (1.560 \pm 0.245)\times\qty{e-11}{V\cdot s}
+单光子电荷量:
+\begin{equation}
+\label{eq:6}
+q = (1.560 \pm 0.245)\times\qty{e-11}{V\cdot s}.
+\end{equation}
 
 ** 衰减长度
-考虑 Error Bar, 重新计算了衰减长度与相关系数:
-
+考虑 Error Bar, 重新计算衰减长度[fn:2]与相关系数:
 \begin{align}
 \label{eq:3}
 L &= 1.643 \pm \qty{0.131}{m} \\
 \rho &= 0.442.
 \end{align}
 
-不确定度优于上次结果.
-
 *** pic1 :BMCOL:
 :PROPERTIES:
 :BEAMER_col: 0.5
 :END:
-#+attr_latex: :width 1.0\textwidth
+#+attr_latex: :width 0.8\textwidth
 #+caption: 衰减长度
 [[../../DetectorPerform/AttenuationLength/figs/Dist.png]]
 
@@ -117,14 +124,21 @@ L &= 1.643 \pm \qty{0.131}{m} \\
 :PROPERTIES:
 :BEAMER_col: 0.5
 :END:
-#+attr_latex: :width 1.0\textwidth
-#+caption: 衰减长度
+#+attr_latex: :width 0.8\textwidth
+#+caption: 衰减长度 (考虑 Error Bar)
 [[../../DetectorPerform/AttenuationLength/figs/AttenuationLength.pdf]]
 
 ** 能量刻度
-#+attr_latex: :width 0.7\textwidth
+#+attr_latex: :width 0.5\textwidth
 #+caption: 能量刻度
 [[../../DetectorPerform/ECali/qqdist.pdf]]
+
+能量分辨率为:
+\begin{equation}
+\label{eq:4}
+\frac{2.35\sigma}{\mu} = \frac{\num{7.386e-11}}{\num{1.066e-10}} = 69.3\%.
+\end{equation}
+
 
 ** \mu 寿命
 *** pic :BMCOL:
@@ -139,9 +153,15 @@ L &= 1.643 \pm \qty{0.131}{m} \\
 :PROPERTIES:
 :BEAMER_col: 0.5
 :END:
-- 测量时长: 56min.
-- 测得 \mu 寿命: \(\tau = 2.026 \pm \qty{0.534}{\mu s}\).
+# - 测量时长: 56min.
+测得 \mu 寿命:  
+\begin{equation}
+\label{eq:5}
+\tau = 2.026 \pm \qty{0.534}{\mu s}.
+\end{equation}
+  
 
 * Footnotes
+[fn:2]不确定度优于上次结果 (0.1494m).
 
-[fn:1]后续测量与测量 \mu 信号的实验条件一致. 
+[fn:1]后续实验条件不变. 
