--- a/slides/Ex02/Ex02.org
+++ b/slides/Ex02/Ex02.org
@@ -34,17 +34,22 @@
 #+end_export
 * 实验目标
 ** 实验目标
-1. 重新测量暗噪声、电子学噪声、\mu 信号与余波的一些参数；
+1. 重新测量 \mu 信号与余波的一些参数；
 2. 测量单光子电荷；
 3. 进行能量刻度；
 4. 测量 \mu 寿命。
+* 实验装置
+** 实验装置
+#+attr_latex: :width 0.8\textwidth
+#+caption: 实验装置
+[[file:img/Ex02_20241024164303.png]]
 * 实验结果
-** 噪声
+** COMMENT 噪声
 在 1500V 电压下进行实验, 得到:
-- 暗噪声频率 \(f_{d} \approx \qty{10.04}{Hz}\).
+- 暗噪声频率 f_{d} \approx \qty{10.04}{Hz}.
 - 电子学噪声振幅 \qty{0.5}{mV}.
   
-** \mu 信号参数
+** \mu 信号测量
 使用甄别器的 4、7 道（甄别电压 \qty{15}{mV}），测量符合信号。[fn:1]
 
 - 左：电压 1350V.
@@ -63,18 +68,28 @@
 
   计数率：\(n = \qty{859}{min^{-1}}\).
 
-同时计算得到偶然符合计数率:
+计算得到偶然符合计数率:
 \begin{equation}
 \label{eq:1}
 n_a = \qty{0.176}{min^{-1}}.
 \end{equation}
 
+** \mu 信号测量
+对闪烁体, 测得长 60.5cm, 宽 15.5cm, 由此可计算 \mu 通量:
+
+\begin{equation}
+\label{eq:2}
+\phi_{\mu} = 0.916 \pm \qty{0.031}{min^{-1}cm^{-2}}.
+\end{equation}
+
 ** 余波时间分布
+余波出现的概率为 13.9%.
+
 *** P1 :BMCOL:
 :PROPERTIES:
 :BEAMER_col: 0.5
 :END:
-#+attr_latex: :width 1.0\textwidth
+#+attr_latex: :width 0.9\textwidth
 #+caption: 所有信号的余波分布
 [[../../img/afterPulse01.pdf]]
 
@@ -82,14 +97,14 @@ n_a = \qty{0.176}{min^{-1}}.
 :PROPERTIES:
 :BEAMER_col: 0.5
 :END:
-#+attr_latex: :width 1.0\textwidth
+#+attr_latex: :width 0.9\textwidth
 #+caption: 存在余波信号的余波分布
 [[../../img/afterPulse02.pdf]]
 
 ** 余波时间分布
-对余波分布作指数拟合:
+余波时间分布比较符合指数规律, 对其作拟合得到:
 
-#+attr_latex: :width 0.7\textwidth
+#+attr_latex: :width 0.6\textwidth
 #+caption: 余波分布拟合
 [[../../img/afterPulse02r.pdf]]
 
