--- a/实验记录.org
+++ b/实验记录.org
@@ -20,7 +20,7 @@
 - 每个组都要介绍实验进展，每组两个人交替报告
 - 按照报告结果、实验投入程度、研究和学习深度打分，期中结束并算总分
 * 预前知识
-** \(\mu\) 的一些性质
+** \mu 的一些性质
 1. 宇宙射线在大气中碰撞产生 \pi，并很快衰变产生 \mu.
 2. \mu 质量大，穿越大气时的能量损失少。
 3. 不一样。质子和 \alpha 占绝大部分。
@@ -238,9 +238,9 @@ Both afterpulse and no afterpulse conditions:
 Only afterpulse conditions (1-9):
 11532338531287189321621638311353172611242114316714382513525142415246217111231326129512458528114371211224412
 
-#+begin_src python :results file append :var plot1="./img/afterPulse01.pdf" plot2="./img/afterPulse02.pdf" plot2r="./img/afterPulse02r.pdf"
+#+begin_src python :results value append :var plot1="./img/afterPulse01.pdf" plot2="./img/afterPulse02.pdf" plot2r="./img/afterPulse02r.pdf"
   import matplotlib.pyplot as plt
-  import ROOT as rt
+  # import ROOT as rt
 
   str1 = "00000010000000001000202000020000000000000010001000000010002300000100300000002000200001000000000000000000200000010000200000000200100200000000001020012000000000000000000000000000000000200000000010000020000000002"
 
@@ -250,37 +250,45 @@ Only afterpulse conditions (1-9):
   array1 = list(str1)
   array2 = list(str2)
 
-  plt.figure()
-  plt.hist(array1, align='left', alpha=0.7, color='b')
-  plt.xticks(["0", "1", "2", "3"], ["no", "1-3", "3-10", "both"])
-  plt.title("afterPulse1")
-  plt.savefig(plot1)
-  # return(plot1)
+  array = [str for str in str1 if int(str)==2]
+  return(len(array1))
 
-  plt.figure()
-  plt.hist([int(char) for char in array2], bins=range(1, 11), align='left', alpha=0.7, color='g')
-  plt.xticks(range(1, 10))
-  plt.title("afterPulse2")
-  plt.savefig(plot2)
-  # return(plot2)
+  # plt.figure()
+  # plt.hist(array1, align='left', alpha=0.7, color='b')
+  # plt.xticks(["0", "1", "2", "3"], ["no", "1-3", "3-10", "both"])
+  # plt.title("afterPulse1")
+  # plt.savefig(plot1)
+  # # return(plot1)
 
-  c1 = rt.TCanvas("c1", "afterPulse2", 800, 600)
-  f1 = rt.TF1("f1", "[0]*exp([1]*x)+[2]", 0, 10)
-  f1.SetParameters(40, -0.3, 0)
-  h1 = rt.TH1F("h1", "afterPulse2", 9, 0.5, 9.5)
-  for str in str2:
-      h1.Fill(int(str))
+  # plt.figure()
+  # plt.hist([int(char) for char in array2], bins=range(1, 11), align='left', alpha=0.7, color='g')
+  # plt.xticks(range(1, 10))
+  # plt.title("afterPulse2")
+  # plt.savefig(plot2)
+  # # return(plot2)
 
-  h1.Fit(f1)
-  rt.gStyle.SetOptFit(1111)
-  h1.Draw()
-  f1.Draw("SAME")
-  c1.SaveAs(plot2r)
-  return(plot2r)
+  # c1 = rt.TCanvas("c1", "afterPulse2", 800, 600)
+  # f1 = rt.TF1("f1", "[0]*exp([1]*x)+[2]", 0, 10)
+  # f1.SetParameters(40, -0.3, 0)
+  # h1 = rt.TH1F("h1", "afterPulse2", 9, 0.5, 9.5)
+  # for str in str2:
+  #     h1.Fill(int(str))
+
+  # h1.Fit(f1)
+  # rt.gStyle.SetOptFit(1111)
+  # h1.Draw()
+  # f1.Draw("SAME")
+  # c1.SaveAs(plot2r)
+  # return(plot2r)
 
 #+end_src
 
 #+RESULTS:
+: 180
+: 12
+: 15
+: 209
+
 [[file:./img/afterPulse02r.pdf]]
 [[file:./img/afterPulse01.pdf]]
 [[file:./img/afterPulse02.pdf]]
