--- a/slides/Ex02/Ex02.tex
+++ b/slides/Ex02/Ex02.tex
@@ -180,7 +180,7 @@ q = (1.560 \pm 0.245)\times\qty{e-11}{V\cdot s}.
 考虑 Error Bar, 重新计算衰减长度\footnote{不确定度优于上次结果 (0.1494m).}与相关系数:
 \begin{align}
 \label{eq:3}
-L &= 1.643 \pm \qty{0.131}{m} \\
+L &= 1.596 \pm \qty{0.128}{m} \\
 \rho &= 0.442.
 \end{align}
 
@@ -237,4 +237,14 @@ L &= 1.643 \pm \qty{0.131}{m} \\
 \end{column}
 \end{columns}
 \end{frame}
+
+\begin{frame}[label={sec:org8795592}]{\(\mu\) 寿命}
+    此外分析这一部分数据的时间电荷分布，同样服从线性分布：
+    $$R^2=0.239.$$
+    \begin{figure}[htbp]
+    \centering
+    \includegraphics[width=1.0\textwidth]{../../DetectorPerform/ReAttenuationLength/figs/AttenuationLength.pdf}
+    \caption{衰减长度}
+    \end{figure}
+    \end{frame}
 \end{document}
