--- a/实验记录.org
+++ b/实验记录.org
@@ -222,6 +222,7 @@ i_{dark} \sim T^{5/4}e^{-\frac{e\psi}{kT}}.
 - 符合
 
   真符合计数率：n = 859min^-1
+  mu子通量：n/(ab)...
   偶然符合计数率：n = 0.0029min^-1
   # 偶然符合计数率：n = 0.021min^-1
   # 计数率：n = 0.021min^-1
