--- a/slides/Ex02/Ex02.tex
+++ b/slides/Ex02/Ex02.tex
@@ -6,11 +6,11 @@
 % fonts
 \usepackage{ctex}
 \usepackage{fontspec}
-\setmainfont{Times New Roman}
-\setmonofont{Inconsolata}
-\setsansfont{Times New Roman}
-\setCJKmainfont{SimSong}
-\setCJKsansfont{SimSong}
+% \setmainfont{Times New Roman}
+% \setmonofont{Inconsolata}
+% \setsansfont{Times New Roman}
+% \setCJKmainfont{SimSong}
+% \setCJKsansfont{SimSong}
 
 \usepackage{amsfonts}
 \usepackage{amsthm}
@@ -39,9 +39,9 @@
 \usepackage{booktabs}
 \usepackage[scale=2]{ccicons}
 \usetheme[block=fill, progressbar=frametitle]{metropolis}
-\useoutertheme{infolines} % 采用 infoline
-\useinnertheme{default}
-\usecolortheme{custom} % 使用 custom 颜色主题
+% \useoutertheme{infolines} % 采用 infoline
+% \useinnertheme{default}
+% \usecolortheme{custom} % 使用 custom 颜色主题
 \setbeamertemplate{blocks}[rounded][shadow=false]
 \setbeamertemplate{items}[circle] % circle item symbol
 \setbeamertemplate{sections/subsections in toc}[ball] % ball section symbol
@@ -72,7 +72,7 @@ linkcolor=black
 \begin{frame}[label={sec:orgba24ec1}]{目录}
 \tableofcontents
 \end{frame}
-\section{实验目标}
+\section{实验内容}
 \label{sec:org8985ec5}
 \begin{frame}[label={sec:org1c7c6fd}]{实验目标}
 \begin{enumerate}
@@ -238,7 +238,7 @@ L &= 1.596 \pm \qty{0.128}{m} \\
 \end{columns}
 \end{frame}
 
-\begin{frame}[label={sec:org8795592}]{\(\mu\) 寿命}
+\begin{frame}{\(\mu\) 寿命}
     此外分析这一部分数据的时间电荷分布，同样服从线性分布：
     $$R^2=0.239.$$
     \begin{figure}[htbp]
