--- a/slides/Ex02/Ex02.org
+++ b/slides/Ex02/Ex02.org
@@ -174,7 +174,18 @@ L &= 1.643 \pm \qty{0.131}{m} \\
 \label{eq:5}
 \tau = 2.026 \pm \qty{0.534}{\mu s}.
 \end{equation}
-  
+
+*** content :BMCOL:
+:PROPERTIES:
+:BEAMER_col: 0.5
+:END:
+同时观察这一部分事例的时间电荷分布，同样服从线性分布：
+$$R^2=0.239$$
+\begin{figure}[htbp]
+\centering
+\includegraphics[width=1.0\textwidth]{../../DetectorPerform/ReAttenuationLength/figs/AttenuationLength.pdf}
+\caption{时间电荷分布}
+\end{figure}
 
 * Footnotes
 [fn:2]不确定度优于上次结果 (0.1494m).
