--- a/slides/Ex02/Ex02.org
+++ b/slides/Ex02/Ex02.org
@@ -91,7 +91,7 @@ n_a = \qty{0.176}{min^{-1}}.
 :END:
 #+attr_latex: :width 0.9\textwidth
 #+caption: 所有信号的余波分布
-[[../../img/afterPulse01.pdf]]
+[[../../DetectorPerform/afterPulse/fig/afterPulse01.pdf]]
 
 *** P2 :BMCOL:
 :PROPERTIES:
@@ -99,14 +99,14 @@ n_a = \qty{0.176}{min^{-1}}.
 :END:
 #+attr_latex: :width 0.9\textwidth
 #+caption: 存在余波信号的余波分布
-[[../../img/afterPulse02.pdf]]
+[[../../DetectorPerform/afterPulse/fig/afterPulse02.pdf]]
 
 ** 余波时间分布
 余波时间分布比较符合指数规律, 对其作拟合得到:
 
 #+attr_latex: :width 0.6\textwidth
 #+caption: 余波分布拟合
-[[../../img/afterPulse02r.pdf]]
+[[../../DetectorPerform/afterPulse/fig/afterPulse02r.pdf]]
 
 ** 单光子电荷
 #+attr_latex: :width 0.6\textwidth
@@ -124,7 +124,7 @@ q = (1.560 \pm 0.245)\times\qty{e-11}{V\cdot s}.
 \begin{align}
 \label{eq:3}
 L &= 1.643 \pm \qty{0.131}{m} \\
-\rho &= 0.442.
+R^2 &= 0.442.
 \end{align}
 
 *** pic1 :BMCOL:
@@ -175,17 +175,20 @@ L &= 1.643 \pm \qty{0.131}{m} \\
 \tau = 2.026 \pm \qty{0.534}{\mu s}.
 \end{equation}
 
-*** content :BMCOL:
-:PROPERTIES:
-:BEAMER_col: 0.5
-:END:
-同时观察这一部分事例的时间电荷分布，同样服从线性分布：
-$$R^2=0.239$$
+**  \mu 寿命
+同时观察这一部分事例的时间电荷分布, 同样服从线性分布, 且:
+\begin{equation}
+\label{eq:8}
+R^2 = 0.239.
+\end{equation}
+#+begin_export latex
 \begin{figure}[htbp]
 \centering
-\includegraphics[width=1.0\textwidth]{../../DetectorPerform/ReAttenuationLength/figs/AttenuationLength.pdf}
+\includegraphics[width=0.6\textwidth]{../../DetectorPerform/AttenuationLength/figs/ReAttenuationLength.pdf}
 \caption{时间电荷分布}
 \end{figure}
+#+end_export
+
 
 * Footnotes
 [fn:2]不确定度优于上次结果 (0.1494m).
