--- a/实验记录.org
+++ b/实验记录.org
@@ -222,7 +222,7 @@ i_{dark} \sim T^{5/4}e^{-\frac{e\psi}{kT}}.
 - 符合
 
   真符合计数率：n = 859min^-1
-  mu子通量：n/(ab)...
+  mu 子通量：n/(ab)...
   偶然符合计数率：n = 0.0029min^-1
   # 偶然符合计数率：n = 0.021min^-1
   # 计数率：n = 0.021min^-1
@@ -241,7 +241,7 @@ Only afterpulse conditions (1-9):
 
 #+begin_src python :results value append :var plot1="./img/afterPulse01.pdf" plot2="./img/afterPulse02.pdf" plot2r="./img/afterPulse02r.pdf"
   import matplotlib.pyplot as plt
-  # import ROOT as rt
+  import ROOT as rt
 
   str1 = "00000010000000001000202000020000000000000010001000000010002300000100300000002000200001000000000000000000200000010000200000000200100200000000001020012000000000000000000000000000000000200000000010000020000000002"
 
@@ -254,42 +254,41 @@ Only afterpulse conditions (1-9):
   array = [str for str in str1 if int(str)==2]
   return(len(array1))
 
-  # plt.figure()
-  # plt.hist(array1, align='left', alpha=0.7, color='b')
-  # plt.xticks(["0", "1", "2", "3"], ["no", "1-3", "3-10", "both"])
-  # plt.title("afterPulse1")
-  # plt.savefig(plot1)
-  # # return(plot1)
+  plt.figure()
+  plt.hist(array1, align='left', alpha=0.7, color='b')
+  plt.xticks(["0", "1", "2", "3"], ["no", "1-3", "3-10", "both"])
+  plt.xlabel(r"time($\mu$s)")
+  plt.ylabel("count")
+  plt.title("afterPulse1")
+  plt.savefig(plot1)
 
-  # plt.figure()
-  # plt.hist([int(char) for char in array2], bins=range(1, 11), align='left', alpha=0.7, color='g')
-  # plt.xticks(range(1, 10))
-  # plt.title("afterPulse2")
-  # plt.savefig(plot2)
-  # # return(plot2)
+  plt.figure()
+  plt.hist([int(char) for char in array2], bins=range(1, 11), align='left', alpha=0.7, color='g')
+  plt.xticks(range(1, 10))
+  plt.xlabel(r"time($\mu$s)")
+  plt.ylabel("count")
+  plt.title("afterPulse2")
+  plt.savefig(plot2)
 
-  # c1 = rt.TCanvas("c1", "afterPulse2", 800, 600)
-  # f1 = rt.TF1("f1", "[0]*exp([1]*x)+[2]", 0, 10)
-  # f1.SetParameters(40, -0.3, 0)
-  # h1 = rt.TH1F("h1", "afterPulse2", 9, 0.5, 9.5)
-  # for str in str2:
-  #     h1.Fill(int(str))
+  c1 = rt.TCanvas("c1", "afterPulse2", 800, 600)
+  f1 = rt.TF1("f1", "[0]*exp([1]*x)+[2]", 0, 10)
+  f1.SetParameters(40, -0.3, 0)
+  h1 = rt.TH1F("h1", "afterPulse2", 9, 0.5, 9.5)
+  for str in str2:
+      h1.Fill(int(str))
 
-  # h1.Fit(f1)
-  # rt.gStyle.SetOptFit(1111)
-  # h1.Draw()
-  # f1.Draw("SAME")
-  # c1.SaveAs(plot2r)
+  h1.Fit(f1)
+  rt.gStyle.SetOptFit(1111)
+  h1.SetXTitle("time(#mus)")
+  h1.SetYTitle("count")
+  h1.Draw()
+  f1.Draw("SAME")
+  c1.SaveAs(plot2r)
   # return(plot2r)
 
 #+end_src
 
 #+RESULTS:
-: 180
-: 12
-: 15
-: 209
-
 [[file:./img/afterPulse02r.pdf]]
 [[file:./img/afterPulse01.pdf]]
 [[file:./img/afterPulse02.pdf]]
@@ -391,6 +390,8 @@ bin: 0-18, 2.
 
   c1 = rt.TCanvas("c1", "Canvas", 800, 600)
   rt.gStyle.SetOptFit(1111)
+  h1.SetXTitle("lifetime(#mus)")
+  h1.SetYTitle("count")
   h1.Draw()
   exp_fit.Draw("SAME")
   c1.SaveAs(filename)
