--- a/实验记录.org
+++ b/实验记录.org
@@ -408,12 +408,156 @@ bin: 0-18, 2.
 - 内存.
 - trigger: 第 N 边沿.
 
-* 实验
+* 实验 <2024-11-17 Sun>
 1. 三重符合, 根据中间的闪烁体结果重新刻度, 并重新测量 \mu 寿命和 Michel 电子能谱
 2. 甄别阈的选取原因
 3. 测量角分布
 4. 分析波形
 
+** 实验条件
+4 路电压均为 1500V, 15mV.
+
+** 单光子电子
+
+** 能量刻度
+
+** 余波
+估读得到:
+
+#+Name: pulse
+| event | t(us) | amplitude(mV) |
+|-------+-------+---------------|
+|     1 |   2.6 |            60 |
+|     2 |   0.5 |            40 |
+|     3 |   1.6 |            40 |
+|     4 |   1.9 |            50 |
+|     5 |   1.9 |            60 |
+|     6 |   2.8 |            40 |
+|     7 |   3.0 |            90 |
+|     8 |   0.9 |            60 |
+|     9 |   0.8 |            40 |
+|    10 |   0.7 |            70 |
+|    11 |   0.7 |            40 |
+|    12 |   0.3 |            30 |
+|    13 |   0.4 |            30 |
+|    14 |   0.3 |            40 |
+
+#+begin_src python :results file :var plot="./img/afterPulse.pdf" pulse=pulse
+  import matplotlib.pyplot as plt
+  import numpy as np
+
+  pulse = np.array(pulse)
+  time = pulse[:, 1]
+  plt.hist(time, bins=5)
+  plt.xlim(0, 3)
+
+  file = "./img/afterPulse.pdf"
+  plt.savefig(file)
+  return(file)
+#+end_src
+
+#+RESULTS:
+[[file:./img/afterPulse.pdf]]
+
+** Michel 电子和寿命
+为排除后脉冲, 甄别阈取 80mV. 采用 *第 N 边沿* 触发. 使用了 *反符合*.<<hl-1>> §n{反符合道仅第 2 道有信号的可能原因是电子能量较高跑到下面了.}
+
+#+name: michelLife
+| event | t(us) |
+|-------+-------|
+|     1 |   2.1 |
+|     2 |   3.8 |
+|     3 |   1.8 |
+|     4 |   0.6 |
+|     5 |   0.1 |
+|     6 |   1.8 |
+|     7 |   1.9 |
+|     8 |   1.8 |
+|     9 |   0.9 |
+|    10 |   1.6 |
+|    11 |   1.2 |
+|    12 |   0.3 |
+|    13 |   0.7 |
+|    14 |   0.5 |
+|    15 |   5.5 |
+|    16 |   0.4 |
+|    17 |   0.3 |
+|    18 |   2.7 |
+|    19 |   2.2 |
+|    20 |   4.3 |
+|    21 |   0.2 |
+|    22 |   0.1 |
+|    23 |   0.7 |
+|    24 |   7.0 |
+|    25 |   1.7 |
+|    26 |   0.6 |
+|    27 |   7.7 |
+|    28 |   1.0 |
+|    29 |   0.3 |
+|    30 |   4.0 |
+|    31 |   0.3 |
+|    32 |   0.7 |
+|    33 |   0.9 |
+|    34 |   1.3 |
+|    35 |   0.7 |
+|    36 |   0.5 |
+|    37 |   0.1 |
+|    38 |   0.7 |
+|    39 |   0.7 |
+|    40 |   0.8 |
+|    41 |   0.2 |
+|    42 |   2.7 |
+|    43 |   1.2 |
+|    44 |   1.9 |
+|    45 |   2.8 |
+|    46 |   2.5 |
+|    47 |   3.6 |
+|    48 |   6.2 |
+|    49 |   1.3 |
+|    50 |   2.2 |
+
+bin: 0-10, 2.
+#+begin_src python :results file :var lifeTime=michelLife filename="./img/lifeHist.pdf"
+  import numpy as np
+  import ROOT as rt
+
+  exp_fit = rt.TF1("exp_fit", "[0]*exp(-x/[1])+[2]", 0, 18)
+  exp_fit.SetParameters(1, 2)
+  life = [lifetime[1] for lifetime in lifeTime]
+  h1 = rt.TH1F("h1", "lifetime", 8, 0, 8)
+  for val in life:
+      h1.Fill(val)
+
+  h1.Sumw2()
+  h1.Fit(exp_fit, "R")
+
+  tau = exp_fit.GetParameter(1)
+  print(f"Fitted tau: {tau}")
+
+  c1 = rt.TCanvas("c1", "Canvas", 800, 600)
+  rt.gStyle.SetOptFit(1111)
+  h1.SetXTitle("lifetime(#mus)")
+  h1.SetYTitle("count")
+  h1.Draw()
+  exp_fit.Draw("SAME")
+  
+  c1.SaveAs(filename)
+  return(filename)
+
+#+end_src
+
+#+RESULTS:
+[[file:./img/lifeHist.pdf]]
+
+** 飞行时间
+使用右侧两闪烁体. 甄别阈 100mV. 电压 1000V.
+
+计算两种放置情形(紧贴和间隔一定距离)下信号的时间差.
+
+- 紧贴: d = -7cm
+- 间隔一定距离: d = 72.8cm
+
+  
 * References
 1. https://era.library.ualberta.ca/items/10813ee8-3b2e-416c-88d2-62ebc976b606/view/648bb639-4b0b-448f-9042-80818bc9fa6a/Singhrao_Kamal_201509_MSc.pdf
 2. https://cosmic.lbl.gov/SKliewer/Cosmic_Rays/Muons.htm
