--- a/slides/Ex04/Ex04.tex
+++ b/slides/Ex04/Ex04.tex
@@ -1,4 +1,4 @@
-% Created 2024-11-21 Thu 15:51
+% Created 2024-11-21 Thu 21:58
 % Intended LaTeX compiler: xelatex
 
 \documentclass[10pt]{beamer}
@@ -71,8 +71,8 @@ linkcolor=black
 
 \maketitle
 \section{实验内容}
-\label{sec:org479bdd6}
-\begin{frame}[label={sec:orgf2840f9}]{实验内容}
+\label{sec:orgb85fb84}
+\begin{frame}[label={sec:org39214a7}]{实验内容}
 \begin{enumerate}
 \item 单光子电荷与能量刻度;
 \item 余波;
@@ -80,7 +80,15 @@ linkcolor=black
 \item \(\mu\) 飞行时间.
 \end{enumerate}
 \end{frame}
-\begin{frame}[label={sec:orgc3defc7}]{单光子电荷}
+\begin{frame}[label={sec:org2231b0d}]{实验装置}
+\begin{figure}[htbp]
+\centering
+\includegraphics[width=0.6\textwidth]{../../img/instru.jpg}
+\caption{实验装置}
+\end{figure}
+\end{frame}
+
+\begin{frame}[label={sec:org1151998}]{单光子电荷}
 在 4 路电压均为 1500V, 15mV 甄别阈下重新测量了单光子电荷.
 \begin{figure}[htbp]
 \centering
@@ -94,33 +102,29 @@ linkcolor=black
 \end{itemize}
 \end{frame}
 
-\begin{frame}[label={sec:org5405b08}]{能量刻度}
+\begin{frame}[label={sec:org251d697}]{能量刻度}
 \begin{figure}[htbp]
 \centering
 \includegraphics[width=0.5\textwidth]{../../DetectorPerform/ECali/qqEdist.pdf}
 \caption{能量刻度}
 \end{figure}
 \begin{itemize}
-\item 刻度系数: \(f = \qty{1.879e3}{MeV \cdot V^{-1} \cdot s^{-1}}\).
+\item 刻度系数: \(f = \qty{5.304e-3}{MeV \cdot mV^{-1} \cdot ns^{-1}}\).
 \item 能量分辨率: 72.3\%.
-\item 光产额:
-\begin{itemize}
-\item \(N_1 = e^{L/2L_0} / (q_1 f) = \num{1.997e7}\).
-\item \(N_2 = e^{L/2L_0} / (q_2 f) = \num{4.573e7}\).
-\end{itemize}
+\item 光产额: \(N = e^{L/2L_0} / (q f) = \qty{13.84}{MeV^{-1}}\)
 \end{itemize}
 \end{frame}
 
-\begin{frame}[label={sec:org4796c69}]{\(\mu\) 余波}
+\begin{frame}[label={sec:org810d366}]{\(\mu\) 余波}
 通过对 \(\mu\) 余波的测量得知:
 \begin{itemize}
-\item 出现余波的概率为 5\% \textasciitilde{} 10\%;
+\item 出现余波的概率为 10\%;
 \item 余波的时间分布集中在 0 \textasciitilde{} 3 \unit{\mu s};
 \item 余波的幅值集中在 30 \textasciitilde{} 70 \unit{mV}.
 \end{itemize}
 \end{frame}
 
-\begin{frame}[label={sec:org22ce4b5}]{Michel 电子能谱}
+\begin{frame}[label={sec:orgde237ab}]{Michel 电子能谱}
 在电压 1500V, 80mV 甄别阈\footnote{排除后脉冲.}条件下重新测量 Michel 电子能谱.
 \begin{columns}
 \begin{column}{0.5\columnwidth}
@@ -134,14 +138,14 @@ linkcolor=black
 \begin{column}{0.5\columnwidth}
 \begin{figure}[htbp]
 \centering
-\includegraphics[width=0.9\textwidth]{../../ExperimentData/michel/michel/mudecay3.png}
+\includegraphics[width=0.9\textwidth]{../../ExperimentData/michel/michel/mudecay1.png}
 \caption{特殊信号}
 \end{figure}
 \end{column}
 \end{columns}
 \end{frame}
 
-\begin{frame}[label={sec:org6bb6e0c}]{Michel 电子能谱}
+\begin{frame}[label={sec:org10c2e4d}]{Michel 电子能谱}
 \begin{figure}[htbp]
 \centering
 \includegraphics[width=0.5\textwidth]{../../mu/michel/michel.pdf}
@@ -150,7 +154,7 @@ linkcolor=black
 能量最高达 50 MeV.
 \end{frame}
 
-\begin{frame}[label={sec:org61f5564}]{\(\mu\) 寿命}
+\begin{frame}[label={sec:orgeaa717b}]{\(\mu\) 寿命}
 \begin{columns}
 \begin{column}{0.5\columnwidth}
 \begin{figure}[htbp]
@@ -166,8 +170,8 @@ linkcolor=black
 \end{columns}
 \end{frame}
 
-\begin{frame}[label={sec:org6a6c780}]{飞行时间}
-在两路电压为 1000V\footnote{右侧两闪烁体信号较大, 故下调电压.}, 100mV 甄别阈下, 通过调整两闪烁体间距测量了 \(\mu\) 飞行时间.
+\begin{frame}[label={sec:orgdb3464a}]{飞行时间}
+在两路电压为 1000V\footnote{右侧两闪烁体信号幅值较大, 故下调电压.}, 100mV 甄别阈下, 通过调整两闪烁体间距测量了 \(\mu\) 飞行时间.
 
 \begin{itemize}
 \item \(\mu\) 速度: \(v_{\mu} = (0.85 \pm 0.07) c\).
@@ -193,8 +197,8 @@ linkcolor=black
 \end{frame}
 
 \section{总结}
-\label{sec:org208b11d}
-\begin{frame}[label={sec:orgb74791b}]{总结}
+\label{sec:orgd387d5d}
+\begin{frame}[label={sec:org1d3c423}]{总结}
 \begin{enumerate}
 \item 在本学期的实验中, 我们对 \(\mu\) 和闪烁体的一些性质有了较好的理解, 对实验装置尤其是示波器的使用以及甄别阈和符合的设置有了更好的掌握, 同时也熟悉了 ROOT 等数据分析工具.
 \item 实验中我们完成了:
